--- a/src/components/Dashboard/Category/CategoryList/style.scss
+++ b/src/components/Dashboard/Category/CategoryList/style.scss
@@ -45,6 +45,13 @@ button {
   padding: 8px;
   text-align: center;
 }
+.categoryList__row__table__row__text__title {
+  max-width: 180px;
+  margin: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .categoryList__row__table__row__text__paragraph {
   max-width: 200px;
   margin: auto;
